--- a/src/styles/_all.scss
+++ b/src/styles/_all.scss
@@ -1,6 +1,7 @@
 @import 'normolize';
 @import 'common';
 @import 'header';
+@import 'footer';
 @import './clocks/roundCircle';
 @import './clocks/blueCircle';
 @import './clocks/rectangleClock';
