--- a/src/styles/_media.scss
+++ b/src/styles/_media.scss
@@ -3,12 +3,6 @@
     font-size: 60%;
   }
 } */
-// @media(max-width: 1600px){
-//   html{font-size: 60%}
-// }
-/* @media(max-width:850px){
-  html{font-size: 50%}
-} */
-// @media(max-width:650px){
-//   html{font-size: 45%}
-// }
+@media(max-width:550px){
+  html{font-size: 70%}
+}
