--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -27,32 +27,43 @@ section{
 .App{
   min-height: 100%;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   width: 100%;
+  min-height: 100vh;
 }
 main{
+  flex-grow: 1;
   padding: 0 .5rem;
   margin-top: $heightHeader;
+  margin-bottom: calc($heightHeader + 1rem);
   width: 100%;
   max-width: 1500px;
   display: flex;
   justify-content: center;
-  
 }
 
 
 footer{
   position: fixed;
+  padding: 0 .5rem;
+  background-color: rgb(141, 140, 140);
   width: 100%;
-  height: 7rem;
+  height: $heightHeader;
   bottom: 0;
   left: 0;
-  background-color: black;
+  border: 1px solid black;
   z-index: 333;
 }
 
+.container{
+  max-width: 1500px;
+  margin: 0 auto;
+  height: 100%;
+  position: relative;
+}
 
-// tegs h
+
 h1{
   font-size: 2.5rem;
 }
