--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -5,16 +5,17 @@ header{
   left: 0;
   width: 100%;
   height: $heightHeader;
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-  padding: 0 1rem;
+  padding: 0 .5rem;
 }
 .header {
-  border-bottom: 1px solid black;
   z-index: 23;
-  background-color: rgba(141, 140, 140, 0.404);
+  background-color: rgb(141, 140, 140);
   &__logo{
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+
     display: flex;
     align-items: center;
     gap: 20px;
@@ -36,22 +37,8 @@ header{
   &__nav ul a{
     font-size: 1.5rem;
   }
-  &__container-contacts{
-    font-family: none;
-    font-size: 20px;
-    display: flex;
-    gap: 2rem
-  }
 }
-@media(max-width:550px){
-  .header{
-    &__container-contacts{
-      display: flex;
-      flex-direction: column;
-      gap: 1rem
-    }
-  }
-}
+
 
 
 
